# 2026-Epita-Intelligence-Symbolique

./: README.md
B4-SMT-Puzzle-Solving/: README.md  flake.nix  pyproject.toml
B4-SMT-Puzzle-Solving/notebooks/: demo.ipynb
B4-SMT-Puzzle-Solving/src/: test.py
B4-SMT-Puzzle-Solving/src/my_logic_puzzle_solver/: __init__.py
B4-SMT-Puzzle-Solving/tests/: test_benchmark.py  test_knights_knaves.py  test_picross.py  test_sudoku.py  test_zebra.py
L3-Resolution-de-jeux-combinatoires-BROUILLARD-Estebane/: .gitignore  README.md  notebook.ipynb  pyproject.toml
L3-Resolution-de-jeux-combinatoires-BROUILLARD-Estebane/agents/: alphabeta.py  base.py  dqn.py  mcts.py  random_agent.py
L3-Resolution-de-jeux-combinatoires-BROUILLARD-Estebane/game/: connect_four.py
L3-Resolution-de-jeux-combinatoires-BROUILLARD-Estebane/models/: dqn.pt  dqn_history.npz  train_log.txt
L3-Resolution-de-jeux-combinatoires-BROUILLARD-Estebane/scripts/: train_dqn.py
L3-Resolution-de-jeux-combinatoires-BROUILLARD-Estebane/slides/: soutenance IASYM-L3.pptx
L3-Resolution-de-jeux-combinatoires-BROUILLARD-Estebane/tests/: test_alphabeta.py  test_connect_four.py  test_dqn.py  test_mcts.py  test_random_and_loop.py  test_tournament.py  test_viz.py
L3-Resolution-de-jeux-combinatoires-BROUILLARD-Estebane/tournament/: runner.py
L3-Resolution-de-jeux-combinatoires-BROUILLARD-Estebane/viz/: board.py  interactive.py  pruning.py  style.py  tournament_viz.py
groupe-G5-Architecture-agentique-semantique-RDF/: README.md  pyproject.toml  requirements.txt  run_pipeline.py
groupe-G5-Architecture-agentique-semantique-RDF/data/corpus/: doc1_datagouv_catalog.ttl  doc2_transport.rdf  doc3_energie.jsonld  doc4_dbpedia_excerpt.nt  doc5_broken.ttl  doc6_inconsistent.ttl
groupe-G5-Architecture-agentique-semantique-RDF/data/linked_data_cache/: dbpedia_excerpt.ttl  wikidata_excerpt.ttl
groupe-G5-Architecture-agentique-semantique-RDF/docs/: ARCHITECTURE.md  evaluation_report.json
groupe-G5-Architecture-agentique-semantique-RDF/ontology/: catalog.ttl
groupe-G5-Architecture-agentique-semantique-RDF/planning/: domain.pddl
groupe-G5-Architecture-agentique-semantique-RDF/shapes/: dataset_shapes.ttl
groupe-G5-Architecture-agentique-semantique-RDF/src/rdf_agents/: __init__.py  blackboard.py  events.py  metrics.py  orchestrator.py  planner.py
groupe-G5-Architecture-agentique-semantique-RDF/tests/: test_agents.py  test_pipeline.py  test_planner.py
(+128 files in other folders)
